# internal/dal/model/tiny_url.gen.go
@@ -1,0 +1,27 @@
+// Code generated by gorm.io/gen. DO NOT EDIT.
+// Code generated by gorm.io/gen. DO NOT EDIT.
+// Code generated by gorm.io/gen. DO NOT EDIT.
+
+package model
+
+import (
+	"time"
+)
+
+const TableNameTinyURL = "tiny_url"
+
+// TinyURL mapped from table <tiny_url>
+type TinyURL struct {
+	ID          int64     `gorm:"column:id;primaryKey;autoIncrement:true" json:"id"`
+	OriginalURL string    `gorm:"column:original_url" json:"originalUrl"`                       // 原始链接
+	TinyURL     string    `gorm:"column:tiny_url" json:"tinyUrl"`                               // 短链
+	Expired     int64     `gorm:"column:expired" json:"expired"`                                // 过期时间
+	Number      int64     `gorm:"column:number" json:"number"`                                  // 跳转次数
+	CreatedAt   time.Time `gorm:"column:created_at;default:CURRENT_TIMESTAMP" json:"createdAt"` // 创建时间
+	UpdatedAt   time.Time `gorm:"column:updated_at;default:CURRENT_TIMESTAMP" json:"updatedAt"` // 更新时间
+}
+
+// TableName TinyURL's table name
+func (*TinyURL) TableName() string {
+	return TableNameTinyURL
+}
